Added Contact Us Section

--- a/index.html
+++ b/index.html
@@ -207,7 +207,35 @@
       <!-- /END THE FEATURETTES -->
 
     </div><!-- /.container -->
-
+    <br><br>
+    <div class="navbar-custom">
+      <div class="container contact-us">
+        <br><br>
+        <h2>CONTACT US</h2>
+        <hr>
+        <div class="row">
+          <div class="col">
+            <h3>Drop us a line!</h3>
+            <form>
+              <input class="navbar-custom contact-us" type="text" name="Name" placeholder="Name" style="height: 50px; width:600px;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
+              <input class="navbar-custom contact-us" type="text" name="Email" placeholder="Email" style="height: 50px; width:600px;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
+              <textarea class="navbar-custom contact-us" rows="4" cols="66" placeholder="Message" style="border:1px solid;padding-left: 20px;padding-top: 10px; border-color: white;"></textarea> </li>
+              <input type="submit" name="submit" value="Submit" style="width: 605px;">
+            </form>
+            <br><br>
+            <br><br>
+          </div>
+          <div class="col">
+            <h3> Better yet, See us in person!</h3>
+            <p>We love our customers, so feel free to visit during normal business hours.</p>
+            <h4>RAS Code Labs</h4>
+            <p>Address: </p>
+            <h5>Hours</h5>
+            <p>Open Monday - Friday, 09:00 am - 05:00 pm</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <br><br>
     <!-- FOOTER -->
     <div class="modal-footer">
