Testing color of form

--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
           <div class="col">
             <h3>Drop us a line!</h3>
             <form>
-              <input class="navbar-custom contact-us" type="text" name="Name" placeholder="Name" style="height: 50px; width:600px;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
-              <input class="navbar-custom contact-us" type="text" name="Email" placeholder="Email" style="height: 50px; width:600px;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
-              <textarea class="navbar-custom contact-us" rows="4" cols="66" placeholder="Message" style="border:1px solid;padding-left: 20px;padding-top: 10px; border-color: white;"></textarea> </li>
+              <input class="navbar-custom contact-us" type="text" name="Name" placeholder="Name" style="color: white; height: 50px; width:600px;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
+              <input class="navbar-custom contact-us" type="text" name="Email" placeholder="Email" style="color: white; height: 50px; width:600px;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
+              <textarea class="navbar-custom contact-us" rows="4" cols="66" placeholder="Message" style="color: white; border:1px solid;padding-left: 20px;padding-top: 10px; border-color: white;"></textarea> </li>
               <input type="submit" name="submit" value="Submit" style="width: 605px;">
             </form>
             <br><br>
