--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@ rel="stylesheet"
     
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2020 Copyright:
-        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        © 2022 Copyright:
+        <a class="text-white">RAS Code Labs</a>
       </div>
       <!-- Copyright -->
     </footer>
