Added contact us and services page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ rel="stylesheet"
   <header>
     <nav class="navbar navbar-custom navbar-expand-md navbar-dark fixed-top">
       <div id="top-left" class="container-fluid">
-        <a class="navbar-brand" id="custom-text" href="#">RAS CODE LABS</a>
+        <a class="navbar-brand" id="custom-text" href="index.html">RAS CODE LABS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -65,10 +65,10 @@ rel="stylesheet"
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+              <a class="nav-link" href="contactus.html" tabindex="-1" aria-disabled="true">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -172,7 +172,7 @@ rel="stylesheet"
             efficiently at the highest level and will evolve and endure. Contact us today to discuss your
             individual business requirements
           </p>
-          <a class="btn btn-lg btn-primary" href="#">See Services</a>
+          <a class="btn btn-lg btn-primary" href="services.html">See Services</a>
         </div>
 
         <div class="col-md-5">
@@ -190,7 +190,7 @@ rel="stylesheet"
           <p class="lead">The world of technology can be fast-paced and scary. That's why our goal is to provide an
             experience that is tailored to your company's needs. No matter the budget, we pride ourselves on providing
             professional customer service. We guarantee you will be satisfied with our work</p>
-          <a class="btn btn-lg btn-primary" href="#">Contact Us</a>
+          <a class="btn btn-lg btn-primary" href="contactus.html">Contact Us</a>
         </div>
         <div class="col-md-5 order-md-1">
           <img style="margin-top: 100px;" src="./Pictures/people.jpeg" class="featurette-image img-fluid rounded-pill mx-auto"
