Changed colour scheme and added logo and collapse function

--- a/contactus.html
+++ b/contactus.html
@@ -44,7 +44,7 @@
         <header>
             <nav class="navbar navbar-custom navbar-expand-md navbar-dark fixed-top">
             <div id="top-left" class="container-fluid">
-                <a class="navbar-brand" id="custom-text" href="index.html">RAS CODE LABS</a>
+                <a class="navbar-brand" id="custom-text" href="index.html"><img style="height: 40px; width: 280px;" src="./Pictures/RASCL_LOGO.jpeg"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -204,7 +204,7 @@
             <!-- Grid container -->
             
             <!-- Copyright -->
-            <div class="text-center p-3" style="background-color:  #099C7F;">
+            <div class="text-center p-3 navbar-custom">
                 © 2022 Copyright:
                 <a>RAS Code Labs</a>
             </div>
