--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ rel="stylesheet"
   <header>
     <nav class="navbar navbar-custom navbar-expand-md navbar-dark fixed-top">
       <div id="top-left" class="container-fluid">
-        <a class="navbar-brand" id="custom-text" href="index.html"><img style="height: 40px; width: 280px;" src="./Pictures/RASCL_LOGO.jpeg"></a>
+        <a class="navbar-brand" id="custom-text" href="index.html"><img style="height: 40px; width: 200px;" src="./Pictures/RASCL.png"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -163,7 +163,7 @@ rel="stylesheet"
             together, grow together and rethink what’s possible together.
           </p>
           <p>
-            At RAS Code Labs, we help to form a large network of SMEs with their contingent
+            At RAS Code Labs (RASCL), we help to form a large network of SMEs with their contingent
             workforce needs every day and RASCL principally provides five sets of core services to
             support those challenging initiatives.
           <ul>
