--- a/contactus.html
+++ b/contactus.html
@@ -44,7 +44,7 @@
         <header>
             <nav class="navbar navbar-custom navbar-expand-md navbar-dark fixed-top">
             <div id="top-left" class="container-fluid">
-                <a class="navbar-brand" id="custom-text" href="index.html"><img style="height: 40px; width: 280px;" src="./Pictures/RASCL_LOGO.jpeg"></a>
+                <a class="navbar-brand" id="custom-text" href="index.html"><img style="height: 40px; width: 200px;" src="./Pictures/RASCL.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
