--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ rel="stylesheet"
 
       <div id="featurette" class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Our Modus Operandi</h2><br>
+          <h2 class="featurette-heading">Our Core Values</h2><br>
           <p class="lead">Running an enterprise business is rewarding but also very challenging. Transformation is being
             transformed from one-off initiatives to an urgent, purpose-driven imperatives.</p>
           <p>
