--- a/services.html
+++ b/services.html
@@ -75,7 +75,7 @@
                     <div class="col" style="text-align: center;">
                         <h3>Digital Transformation Consulting</h3>
                         <p>
-                            Our engineers build and deploy the infrastructure that powers mission-critical systems across government and enterprise. Using a top-down design methodology, we ensure that the individual components and layers of a system work harmoniously with the overall architecture. Our expertise covers every engineering domain, including:
+                            Our engineers build and deploy the infrastructure that powers mission-critical systems across government and enterprise. Using a top-down design methodology, we ensure that the individual components and layers of a system work harmoniously with the overall architecture.
                         </p>
                         <br>
                     </div>
