Made components responsive

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ rel="stylesheet"
 
           <div class="container">
             <div class="carousel-caption">
-              <h1 style="font-size: 80px;text-shadow: black 5px 5px 10px;">Professional</h1><br>
-              <h1 style="font-size: 80px; text-shadow: black 5px 5px 10px;">Technology Assistance</h1>
+              <h1 style="font-size: 80px;text-shadow: black 5px 5px 10px;font-size:6vw;">Professional</h1><br>
+              <h1 style="font-size: 80px; text-shadow: black 5px 5px 10px;font-size:6vw;">Technology Assistance</h1>
               <hr>
               <p style="text-shadow: black 5px 5px 10px;">We make technology accessible!</p>
               <p><a class="btn btn-lg btn-primary" href="#featurette">Learn more</a></p>
@@ -87,68 +87,70 @@ rel="stylesheet"
       <!-- Three columns of text below the carousel -->
       <div class="row row-cols-5" style="justify-content: center;">
         <div class="col" style="justify-content: center;">
-          <img src="./Pictures/1.jpeg" class="bd-placeholder-img rounded-circle displayed" width="140" height="140"
+          <img src="./Pictures/1.jpeg" class="bd-placeholder-img rounded-circle displayed" width="50%" height="50%"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Service Name</title>
           <rect width="100%" height="100%" fill="#777" />
 
-          <h5 class="center">Digital Transformation Consulting</h5>
-          <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight1">View Details</button>
+          <h5 class="center" style="font-size:2vw">Digital Transformation Consulting</h5>
+        <div>
+          <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight1" style="font-size:1vw">View Details</button>
           <div class="collapse" id="highlight1">
-            <p class="card-text center">Our engineers build and deploy the infrastructure that powers mission-critical systems across government and enterprise. Using a top-down design methodology, we ensure that the individual components and layers of a system work harmoniously with the overall architecture.</p>
+            <p class="card-text center" style="font-size:1vw">Our engineers build and deploy the infrastructure that powers mission-critical systems across government and enterprise. Using a top-down design methodology, we ensure that the individual components and layers of a system work harmoniously with the overall architecture.</p>
           </div>
         </div>
+        </div>
         <div class="col">
-          <img src="./Pictures/2.jpeg" class="bd-placeholder-img rounded-circle displayed" width="140" height="140"
+          <img src="./Pictures/2.jpeg" class="bd-placeholder-img rounded-circle displayed" width="50%" height="50%"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Service Name</title>
           <rect width="100%" height="100%" fill="#777" />
 
-          <h5 class="center">Business Process Management and Optimisation</h5>
-          <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight2">View Details</button>
+          <h5 class="center" style="font-size:2vw">Business Process Management and Optimisation</h5>
+          <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight2" style="font-size:1vw">View Details</button>
           <div class="collapse" id="highlight2">
-            <p class="card-text center">When it comes to managing information, most business processes are sub-optimal and inefficient. At RASCL, we have years of experience in designing, building, and deploying Process Automation solution and systems. </p>
+            <p class="card-text center" style="font-size:1vw">When it comes to managing information, most business processes are sub-optimal and inefficient. At RASCL, we have years of experience in designing, building, and deploying Process Automation solution and systems. </p>
           </div>
         </div>
         <div class="col">
-          <img src="./Pictures/3.jpeg" class="bd-placeholder-img rounded-circle displayed" width="140" height="140"
+          <img src="./Pictures/3.jpeg" class="bd-placeholder-img rounded-circle displayed" width="50%" height="50%"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Service Name</title>
           <rect width="100%" height="100%" fill="#777" />
 
-          <h5 class="center">Application and Infrastructure Support Management</h5>
-          <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight3">View Details</button>
+          <h5 class="center" style="font-size:2vw">Application and Infrastructure Support Management</h5>
+          <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight3" style="font-size:1vw">View Details</button>
           <div class="collapse" id="highlight3">
-            <p class="card-text center">We provide strategic, long-term support for infrastructure and applications. Using proven methodologies for service delivery and project management, we ensure the security, reliability, and availability of our clients’ systems.</p>
+            <p class="card-text center" style="font-size:1vw">We provide strategic, long-term support for infrastructure and applications. Using proven methodologies for service delivery and project management, we ensure the security, reliability, and availability of our clients’ systems.</p>
           </div>
         </div><div class="col">
-          <img src="./Pictures/4.jpeg" class="bd-placeholder-img rounded-circle displayed" width="140" height="140"
+          <img src="./Pictures/4.jpeg" class="bd-placeholder-img rounded-circle displayed" width="50%" height="50%"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Service Name</title>
           <rect width="100%" height="100%" fill="#777" />
 
-          <h5 class="center">Application, Data, and Technology Consulting</h5>
-          <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight4">View Details</button>
+          <h5 class="center" style="font-size:2vw">Application, Data, and Technology Consulting</h5>
+          <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight4" style="font-size:1vw">View Details</button>
           <div class="collapse" id="highlight4">
-            <p class="card-text center">We work alongside clients to collaborate on growth of your business applications, data and the technology open to customer’s purpose-driven imperatives, define new ecosystems, and redefine how work gets done.</p>
+            <p class="card-text center" style="font-size:1vw">We work alongside clients to collaborate on growth of your business applications, data and the technology open to customer’s purpose-driven imperatives, define new ecosystems, and redefine how work gets done.</p>
           </div>
         </div><div class="col">
-          <img src="./Pictures/5.jpeg" class="bd-placeholder-img rounded-circle displayed" width="140" height="140"
+          <img src="./Pictures/5.jpeg" class="bd-placeholder-img rounded-circle displayed" width="50%" height="50%"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Service Name</title>
           <rect width="100%" height="100%" fill="#777" />
 
-          <h5 class="center">Workforce and Contractor Management</h5>
-          <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight5">View Details</button>
+          <h5 class="center" style="font-size:2vw">Workforce and Contractor Management</h5>
+          <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight5" style="font-size:1vw">View Details</button>
           <div class="collapse" id="highlight5">
-            <p class="card-text center">Our technology services and system integration expertise are available as standalone solutions. From generic to customisable payroll software to cloud workforce management systems, our SaaS products offer the efficiency required to automate the procure to pay process. We can engage contractors on behalf of your organisation.</p>
+            <p class="card-text center" style="font-size:1vw">Our technology services and system integration expertise are available as standalone solutions. From generic to customisable payroll software to cloud workforce management systems, our SaaS products offer the efficiency required to automate the procure to pay process. We can engage contractors on behalf of your organisation.</p>
           </div>
         </div>
       </div><!-- /.row -->
 
 
       <!-- START THE FEATURETTES -->
-
+      <br> <br> <br> <br> <br> <br> <br> 
       <hr class="featurette-divider">
 
       <div id="featurette" class="row featurette">
