--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ rel="stylesheet"
   <header>
     <nav class="navbar navbar-custom navbar-expand-md navbar-dark fixed-top">
       <div id="top-left" class="container-fluid">
-        <a class="navbar-brand" id="custom-text" href="index.html"><img style="height: 40px; width: 200px;" src="./Pictures/RASCL.png"></a>
+        <a class="navbar-brand" id="custom-text" href="index.html"><img class="logo img-fluid" style="height: 40px; width: 200px;" src="./Pictures/RASCL.png"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -150,7 +150,7 @@ rel="stylesheet"
 
 
       <!-- START THE FEATURETTES -->
-      <br> <br> <br> <br> <br> <br> <br> 
+      <br> <br> <br>
       <hr class="featurette-divider">
 
       <div id="featurette" class="row featurette">
@@ -229,19 +229,19 @@ rel="stylesheet"
 
     </div><!-- /.container -->
     <br><br>
-    <div class="navbar-custom">
+    <div class="primary-color">
       <div class="container contact-us">
         <br><br>
         <h2>CONTACT US</h2>
         <hr>
         <div class="row">
-          <div class="col">
+          <div class="col-md">
             <h3>Drop us a line!</h3>
             <form>
-              <input class="navbar-custom contact-us" type="text" name="Name" placeholder="Name" style="height: 50px; width:600px;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
-              <input class="navbar-custom contact-us" type="text" name="Email" placeholder="Email" style="height: 50px; width:600px;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
-              <textarea class="navbar-custom contact-us" rows="4" cols="66" placeholder="Message" style=" border:1px solid;padding-left: 20px;padding-top: 10px; border-color: white;"></textarea> </li>
-              <input type="submit" name="submit" value="Submit" style="width: 605px;">
+              <input class="primary-color contact-us" type="text" name="Name" placeholder="Name" style="height: 100%; width:100%;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
+              <input class="primary-color contact-us" type="text" name="Email" placeholder="Email" style="height: 100%; width:100%;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
+              <textarea class="primary-color contact-us" rows="4" cols="66" placeholder="Message" style="height: 100%; width:100%; border:1px solid;padding-left: 20px;padding-top: 10px; border-color: white;"></textarea> </li>
+              <input type="submit" name="submit" value="Submit" style="height: 100%; width:100%">
             </form>
             <br><br>
             <br><br>
