--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@ rel="stylesheet"
     </nav>
   </header>
   <main>
-
+    <br>
     <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="bd-placeholder-img" src="./Pictures/carousel.jpeg" width="100%" height="100%" aria-hidden="true"
             preserveAspectRatio="xMidYMid slice" focusable="false">
-          <rect width="100%" height="100%" fill="#777" />
 
           <div class="container">
             <div class="carousel-caption">
@@ -70,7 +69,7 @@ rel="stylesheet"
               <h1 style="font-size: 80px; text-shadow: black 5px 5px 10px;font-size:6vw;">Technology Assistance</h1>
               <hr>
               <p style="text-shadow: black 5px 5px 10px;">We make technology accessible!</p>
-              <p><a class="btn btn-lg btn-primary" href="#featurette">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="#values">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -87,7 +86,7 @@ rel="stylesheet"
       <!-- Three columns of text below the carousel -->
       <div class="row row-cols-5" style="justify-content: center;">
         <div class="col" style="justify-content: center;">
-          <img src="./Pictures/1.jpeg" class="bd-placeholder-img rounded-circle displayed" width="50%" height="50%"
+          <img src="./Pictures/1.jpeg" class="bd-placeholder-img rounded-circle displayed img-fluid" max-width="100%" height="auto%"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Service Name</title>
           <rect width="100%" height="100%" fill="#777" />
@@ -96,12 +95,12 @@ rel="stylesheet"
         <div>
           <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight1" style="font-size:1vw">View Details</button>
           <div class="collapse" id="highlight1">
-            <p class="card-text center" style="font-size:1vw">Our engineers build and deploy the infrastructure that powers mission-critical systems across government and enterprise. Using a top-down design methodology, we ensure that the individual components and layers of a system work harmoniously with the overall architecture.</p>
+            <p class="card-text center" style="font-size:1.2vw">Our engineers build and deploy the infrastructure that powers mission-critical systems across government and enterprise. Using a top-down design methodology, we ensure that the individual components and layers of a system work harmoniously with the overall architecture.</p>
           </div>
         </div>
         </div>
         <div class="col">
-          <img src="./Pictures/2.jpeg" class="bd-placeholder-img rounded-circle displayed" width="50%" height="50%"
+          <img src="./Pictures/2.jpeg" class="bd-placeholder-img rounded-circle displayed img-fluid" max-width="100%" height="auto%"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Service Name</title>
           <rect width="100%" height="100%" fill="#777" />
@@ -109,11 +108,11 @@ rel="stylesheet"
           <h5 class="center" style="font-size:2vw">Business Process Management and Optimisation</h5>
           <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight2" style="font-size:1vw">View Details</button>
           <div class="collapse" id="highlight2">
-            <p class="card-text center" style="font-size:1vw">When it comes to managing information, most business processes are sub-optimal and inefficient. At RASCL, we have years of experience in designing, building, and deploying Process Automation solution and systems. </p>
+            <p class="card-text center" style="font-size:1.2vw">When it comes to managing information, most business processes are sub-optimal and inefficient. At RASCL, we have years of experience in designing, building, and deploying Process Automation solution and systems. </p>
           </div>
         </div>
         <div class="col">
-          <img src="./Pictures/3.jpeg" class="bd-placeholder-img rounded-circle displayed" width="50%" height="50%"
+          <img src="./Pictures/3.jpeg" class="bd-placeholder-img rounded-circle displayed img-fluid" max-width="100%" height="auto%"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Service Name</title>
           <rect width="100%" height="100%" fill="#777" />
@@ -121,10 +120,10 @@ rel="stylesheet"
           <h5 class="center" style="font-size:2vw">Application and Infrastructure Support Management</h5>
           <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight3" style="font-size:1vw">View Details</button>
           <div class="collapse" id="highlight3">
-            <p class="card-text center" style="font-size:1vw">We provide strategic, long-term support for infrastructure and applications. Using proven methodologies for service delivery and project management, we ensure the security, reliability, and availability of our clients’ systems.</p>
+            <p class="card-text center" style="font-size:1.2vw">We provide strategic, long-term support for infrastructure and applications. Using proven methodologies for service delivery and project management, we ensure the security, reliability, and availability of our clients’ systems.</p>
           </div>
         </div><div class="col">
-          <img src="./Pictures/4.jpeg" class="bd-placeholder-img rounded-circle displayed" width="50%" height="50%"
+          <img src="./Pictures/4.jpeg" class="bd-placeholder-img rounded-circle displayed img-fluid" max-width="100%" height="auto%"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Service Name</title>
           <rect width="100%" height="100%" fill="#777" />
@@ -132,10 +131,10 @@ rel="stylesheet"
           <h5 class="center" style="font-size:2vw">Application, Data, and Technology Consulting</h5>
           <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight4" style="font-size:1vw">View Details</button>
           <div class="collapse" id="highlight4">
-            <p class="card-text center" style="font-size:1vw">We work alongside clients to collaborate on growth of your business applications, data and the technology open to customer’s purpose-driven imperatives, define new ecosystems, and redefine how work gets done.</p>
+            <p class="card-text center" style="font-size:1.2vw">We work alongside clients to collaborate on growth of your business applications, data and the technology open to customer’s purpose-driven imperatives, define new ecosystems, and redefine how work gets done.</p>
           </div>
         </div><div class="col">
-          <img src="./Pictures/5.jpeg" class="bd-placeholder-img rounded-circle displayed" width="50%" height="50%"
+          <img src="./Pictures/5.jpeg" class="bd-placeholder-img rounded-circle displayed img-fluid" max-width="100%" height="auto%"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Service Name</title>
           <rect width="100%" height="100%" fill="#777" />
@@ -143,17 +142,17 @@ rel="stylesheet"
           <h5 class="center" style="font-size:2vw">Workforce and Contractor Management</h5>
           <button type="button" class="btn btn-secondary displayed" data-toggle="collapse" data-target="#highlight5" style="font-size:1vw">View Details</button>
           <div class="collapse" id="highlight5">
-            <p class="card-text center" style="font-size:1vw">Our technology services and system integration expertise are available as standalone solutions. From generic to customisable payroll software to cloud workforce management systems, our SaaS products offer the efficiency required to automate the procure to pay process. We can engage contractors on behalf of your organisation.</p>
+            <p class="card-text center" style="font-size:1.2vw">Our technology services and system integration expertise are available as standalone solutions. From generic to customisable payroll software to cloud workforce management systems, our SaaS products offer the efficiency required to automate the procure to pay process. We can engage contractors on behalf of your organisation.</p>
           </div>
         </div>
       </div><!-- /.row -->
 
 
       <!-- START THE FEATURETTES -->
-      <br> <br> <br>
+      <br> <br> <br> <br>
       <hr class="featurette-divider">
 
-      <div id="featurette" class="row featurette">
+      <div id="values" class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Our Core Values</h2><br>
           <p class="lead">Running an enterprise business is rewarding but also very challenging. Transformation is being
@@ -238,10 +237,10 @@ rel="stylesheet"
           <div class="col-md">
             <h3>Drop us a line!</h3>
             <form>
-              <input class="primary-color contact-us" type="text" name="Name" placeholder="Name" style="height: 100%; width:100%;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
-              <input class="primary-color contact-us" type="text" name="Email" placeholder="Email" style="height: 100%; width:100%;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
-              <textarea class="primary-color contact-us" rows="4" cols="66" placeholder="Message" style="height: 100%; width:100%; border:1px solid;padding-left: 20px;padding-top: 10px; border-color: white;"></textarea> </li>
-              <input type="submit" name="submit" value="Submit" style="height: 100%; width:100%">
+              <input class="primary-color contact-us input-box" type="text" name="Name" placeholder="Name"><br><br>
+              <input class="primary-color contact-us input-box" type="text" name="Email" placeholder="Email"><br><br>
+              <textarea class="primary-color contact-us message-box" rows="4" cols="66" placeholder="Message"></textarea> </li>
+              <input type="submit" name="submit" value="Submit" class="input-box">
             </form>
             <br><br>
             <br><br>
