--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
         <header>
             <nav class="navbar navbar-custom navbar-expand-md navbar-dark fixed-top">
             <div id="top-left" class="container-fluid">
-                <a class="navbar-brand" id="custom-text" href="index.html"><img style="height: 40px; width: 200px;" src="./Pictures/RASCL.png"></a>
+                <a class="navbar-brand" id="custom-text" href="index.html"><img class="logo img-fluid" style="height: 40px; width: 200px;" src="./Pictures/RASCL.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -104,34 +104,34 @@
             </div>
 
             <br><br>
-            <div class="navbar-custom">
-            <div class="container contact-us">
-                <br><br>
-                <h2>CONTACT US</h2>
-                <hr>
-                <div class="row">
-                <div class="col">
-                    <h3>Drop us a line!</h3>
-                    <form>
-                    <input class="navbar-custom contact-us" type="text" name="Name" placeholder="Name" style="height: 50px; width:600px;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
-                    <input class="navbar-custom contact-us" type="text" name="Email" placeholder="Email" style="height: 50px; width:600px;border:1px solid; padding-left: 20px; border-color: white;"><br><br>
-                    <textarea class="navbar-custom contact-us" rows="4" cols="66" placeholder="Message" style=" border:1px solid;padding-left: 20px;padding-top: 10px; border-color: white;"></textarea> </li>
-                    <input type="submit" name="submit" value="Submit" style="width: 605px;">
-                    </form>
-                    <br><br>
-                    <br><br>
+            <div class="primary-color">
+                <div class="container contact-us">
+                  <br><br>
+                  <h2>CONTACT US</h2>
+                  <hr>
+                  <div class="row">
+                    <div class="col-md">
+                      <h3>Drop us a line!</h3>
+                      <form>
+                        <input class="primary-color contact-us input-box" type="text" name="Name" placeholder="Name"><br><br>
+                        <input class="primary-color contact-us input-box" type="text" name="Email" placeholder="Email"><br><br>
+                        <textarea class="primary-color contact-us message-box" rows="4" cols="66" placeholder="Message"></textarea> </li>
+                        <input type="submit" name="submit" value="Submit" class="input-box">
+                      </form>
+                      <br><br>
+                      <br><br>
+                    </div>
+                    <div class="col">
+                      <h3> Better yet, See us in person!</h3>
+                      <p>We love our customers, so feel free to visit during normal business hours.</p>
+                      <h4>RAS Code Labs</h4>
+                      <p>Address: </p>
+                      <h5>Hours</h5>
+                      <p>Open Monday - Friday, 09:00 am - 05:00 pm</p>
+                    </div>
+                  </div>
                 </div>
-                <div class="col">
-                    <h3> Better yet, See us in person!</h3>
-                    <p>We love our customers, so feel free to visit during normal business hours.</p>
-                    <h4>RAS Code Labs</h4>
-                    <p>Address: </p>
-                    <h5>Hours</h5>
-                    <p>Open Monday - Friday, 09:00 am - 05:00 pm</p>
-                </div>
-                </div>
-            </div>
-            </div>
+              </div>
             <br><br>
             <!-- FOOTER -->
             <footer class="bg-light text-center text-white">
